--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
 <header id="header">
     <div class="header-inner">
         <div class="logo">
-            <img src="logo-optimized.png" alt="Elemental Landscapes">
+            <img src="headlogo.jpg" alt="Elemental Landscapes">
         </div>
         
         <div class="menu-toggle" onclick="toggleMenu()">
