--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
 <section class="hero">
     <div class="hero-background">
         <!-- Replace with your best project photo -->
-        <img src="https://images.unsplash.com/photo-1558618666-fcd25c85cd64?auto=format&fit=crop&w=2400&q=80" alt="Landscape project">
+        <img src="hero.jpg" alt="Landscape project">
     </div>
     <div class="hero-content">
         <h1>Welcome Home</h1>
