--- a/index.html
+++ b/index.html
@@ -633,8 +633,8 @@
             
             <!-- Comparison Slider 1 -->
             <div class="comparison-slider" data-slider="1">
-                <img class="before-image" src="https://images.unsplash.com/photo-1600585154084-4e5fe7c39198?auto=format&fit=crop&w=1600&q=80" alt="Before">
-                <img class="after-image" src="https://images.unsplash.com/photo-1600607687939-ce8a6c25118c?auto=format&fit=crop&w=1600&q=80" alt="After">
+                <img class="before-image" src="pool-before.jpg" alt="Pool area before landscaping">
+                <img class="after-image" src="pool-after.jpg" alt="Pool area after landscaping">
                 <div class="slider-handle"></div>
                 <div class="slider-labels">
                     <span class="slider-label">BEFORE</span>
