--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
 <section class="hero">
     <div class="hero-background">
         <!-- Replace with your best project photo -->
-        <img src="hero.jpg" alt="Landscape project">
+        <img src="hero-fireplace-1.jpg" alt="Landscape project">
     </div>
     <div class="hero-content">
         <h1>Welcome Home</h1>
