--- a/index.html
+++ b/index.html
@@ -1063,7 +1063,7 @@
                         <h4 style="margin-bottom: 1rem; font-size: 1.3rem;">Or Send Us a Message</h4>
                         
                         <!-- CHANGE EMAIL HERE: Replace YOUR_FORMSPREE_ID with your actual ID -->
-                        <form id="contact-form" action="https://formspree.io/f/YOUR_FORMSPREE_ID" method="POST">
+                        <form id="contact-form" action="https://formspree.io/f/mwvnqkeg" method="POST">
                             <input type="hidden" name="_subject" value="New inquiry from Elemental Landscapes website">
                             
                             <div class="form-group">
