--- a/index.html
+++ b/index.html
@@ -780,6 +780,10 @@
         
         /* Responsive */
         @media (max-width: 768px) {
+            .header-inner {
+                padding: 0 1rem;
+            }
+            
             .header-phone {
                 height: 60px;
             }
@@ -1133,7 +1137,7 @@
                     <!-- PHONE NUMBER with Call & Text Options -->
                     <div class="phone-options">
                         <a href="tel:+18289896156" class="contact-link phone-call-btn">
-                            <span class="phone-icon">📞</span> Call (828) 989-6156
+                            <span class="phone-icon">📞</span> Call Us
                         </a>
                         <a href="sms:+18289896156" class="contact-link phone-text-btn">
                             <span class="phone-icon">💬</span> Text Us
