--- a/index.html
+++ b/index.html
@@ -887,7 +887,7 @@
         <img src="hero-fireplace-1.jpg" alt="Outdoor fireplace landscape project">
     </div>
     <div class="hero-content">
-        <h1>Welcome Home</h1>
+        <h1>Welcome Home.</h1>
         
         <!-- Simple Text Navigation Links -->
         <nav class="hero-nav">
@@ -1137,10 +1137,10 @@
                     <!-- PHONE NUMBER with Call & Text Options -->
                     <div class="phone-options">
                         <a href="tel:+18289896156" class="contact-link phone-call-btn">
-                            <span class="phone-icon">📞</span> Call Us
+                            <span class="phone-icon">📞</span> Call
                         </a>
                         <a href="sms:+18289896156" class="contact-link phone-text-btn">
-                            <span class="phone-icon">💬</span> Text Us
+                            <span class="phone-icon">💬</span> Text
                         </a>
                     </div>
                     
