--- a/index.html
+++ b/index.html
@@ -971,10 +971,10 @@
                     <div class="gallery-grid">
                     <!-- Gallery Item 1 -->
                     <div class="gallery-item" onclick="openLightbox(0)">
-                        <img src="https://images.unsplash.com/photo-1558618666-fcd25c85cd64?auto=format&fit=crop&w=800&q=80" alt="Stone retaining wall with landscaping">
+                        <img src="elemental-gallery-10.jpg" alt="Stone retaining wall with landscaping">
                         <div class="gallery-caption">
-                            <h4>Tiered Retaining Wall</h4>
-                            <p>Asheville, NC - 2024</p>
+                            <h4>Boulder Retaining Wall</h4>
+                            <p>Flat Rock, NC</p>
                         </div>
                     </div>
                     
