--- a/index.html
+++ b/index.html
@@ -1133,8 +1133,8 @@
             
             <div class="services-grid">
                 <div class="service-item">
-                    <h3>Retaining Walls</h3>
-                    <p>Structural & decorative solutions</p>
+                    <h3>Landscape Design</h3>
+                    <p>We create professional custom landscape plans tailored to your property's unique character and your lifestyle needs. From plant selection and placement to hardscape integration, we design outdoor spaces that are both beautiful and functional. Our designs balance aesthetics with practical considerations like drainage, maintenance, and seasonal interest.  Our plans are produced with CAD and ready to be submitted for permitting or HOA approval.</p>
                 </div>
                 <div class="service-item">
                     <h3>Patios & Hardscaping</h3>
