--- a/index.html
+++ b/index.html
@@ -1137,8 +1137,8 @@
                     <p>We create professional custom landscape plans tailored to your property's unique character and your lifestyle needs. From plant selection and placement to hardscape integration, we design outdoor spaces that are both beautiful and functional. Our designs balance aesthetics with practical considerations like drainage, maintenance, and seasonal interest.  Our plans are produced with CAD and ready to be submitted for permitting or HOA approval.</p>
                 </div>
                 <div class="service-item">
-                    <h3>Patios & Hardscaping</h3>
-                    <p>Durable outdoor living spaces</p>
+                    <h3>Retaining Walls & Boulder Placement</h3>
+                    <p>Our retaining walls are both structural and sculptural. Built for the terrain and style of the mountains and designed to transform slopes into striking landscape features. We solve grade challenges while creating outdoor spaces that elevate your property.</p>
                 </div>
                 <div class="service-item">
                     <h3>Water Features</h3>
