--- a/index.html
+++ b/index.html
@@ -1141,8 +1141,8 @@
                     <p>Our retaining walls are both structural and sculptural. Built for the terrain and style of the mountains and designed to transform slopes into striking landscape features. We solve grade challenges while creating outdoor spaces that elevate your property.</p>
                 </div>
                 <div class="service-item">
-                    <h3>Water Features</h3>
-                    <p>Ponds, streams & fountains</p>
+                    <h3>Grading</h3>
+                    <p>We sculpt terrain to direct water, create level spaces, and reveal your property's natural potential. Every slope, swale, and contour is intentionally engineered for function and formed for beauty.  It's the invisible artistry that makes water disappear, lawns thrive, and outdoor spaces feel perfectly proportioned.  The result is terrain that feels natural, functions flawlessly, and sets the stage for everything we build. </p>
                 </div>
                 <div class="service-item">
                     <h3>Outdoor Kitchens</h3>
