--- a/index.html
+++ b/index.html
@@ -1145,8 +1145,8 @@
                     <p>We sculpt terrain to direct water, create level spaces, and reveal your property's natural potential. Every slope, swale, and contour is intentionally engineered for function and formed for beauty.  It's the invisible artistry that makes water disappear, lawns thrive, and outdoor spaces feel perfectly proportioned.  The result is terrain that feels natural, functions flawlessly, and sets the stage for everything we build. </p>
                 </div>
                 <div class="service-item">
-                    <h3>Outdoor Kitchens</h3>
-                    <p>Complete cooking & entertaining areas</p>
+                    <h3>Fire</h3>
+                    <p>Fire features define outdoor rooms. We craft custom fireplaces and fire pits that are natural gathering places.  Whether it's a towering stone chimney or an intimate circle nestled in a patio. Stone hearths, built-in seating, and thoughtful placement turn your space into a destination with purpose and atmosphere.  The result is an outdoor room with a view to the sky where memories are forged.</p>
                 </div>
                 <div class="service-item">
                     <h3>Landscape Design</h3>
