--- a/index.html
+++ b/index.html
@@ -1141,7 +1141,7 @@
                 </div>
                 <div class="service-item">
                     <h3>Trees, Shrubs and Other Plantings</h3>
-                    <p>From 4-inch pots to trees over 20 feet tall, we have the knowledge and equipment to put the right plant in the right place. We consider sun, soil, drainage and function for privacy buffers, foundation plantings, and seasonal interest. With over 18 years of experience, we source quality plants at competitive rates and install them right. The result is a landscape that serves your needs and looks good from installation to maturity.</p>
+                    <p>From 4-inch pots to trees over 20 feet tall, we have the knowledge and equipment to put the right plant in the right place. We consider sun, soil, drainage and function for every planting.  Privacy buffers and foundation plantings are our specialty. With over 18 years of experience, we source quality plants at competitive rates and we install them right. The result is a landscape that serves your needs and looks good from installation to maturity. </p>
                 </div>
                 <div class="service-item">
                     <h3>Drainage</h3>
