--- a/index.html
+++ b/index.html
@@ -1145,7 +1145,7 @@
                 </div>
                 <div class="service-item">
                     <h3>Drainage</h3>
-                    <p>Water finds its way.  The mountains show you where it wants to go. We engineer drainage systems for steep terrain, variable soil, and heavy rainfall.  French drains, graded swales, and Drain Gardens designed to manage the entire watershed of your property.  Our experience in reading slope, calculating capacity, and building solutions protects structures and prevents erosion while turning drainage challenges into functional and attractive landscape features.</p>
+                    <p>Water finds its way.  The mountains tell you where it wants to go…. We engineer drainage systems for steep terrain, variable soil, and heavy rainfall.  French drains, graded swales, and Drain Gardens designed to manage the entire watershed of your property.  Our experience in reading slope, calculating capacity, and building solutions protects structures and prevents erosion while turning drainage challenges into functional and attractive landscape features.</p>
                 </div>
             </div>
         </div>
