--- a/index.html
+++ b/index.html
@@ -1119,7 +1119,7 @@
     <section class="services section">
         <div class="section-inner">
             <div class="section-header">
-                <h2>What We Build</h2>
+                <h2>What We Do and What We Build</h2>
             </div>
             
             <div class="services-grid">
