--- a/index.html
+++ b/index.html
@@ -1140,7 +1140,7 @@
                     <p>Fire features define outdoor rooms. We craft custom fireplaces and fire pits that create natural gathering places.  Whether it's a towering stone chimney or an intimate circle nestled in a patio. Stone hearths, built-in seating, and thoughtful placement turn your space into a destination with purpose and atmosphere.  The result is an outdoor room with a view to the sky. A place where memories are forged.</p>
                 </div>
                 <div class="service-item">
-                    <h3>Plants</h3>
+                    <h3>Plantings</h3>
                     <p>From 4-inch pots to trees over 20 feet tall, we have the knowledge and equipment to put the right plant in the right place. We consider sun, soil, drainage and function for every planting.  Privacy buffers and foundation plantings are our specialty. With over 18 years of experience, we source quality plants at competitive rates and we install them right. The result is a landscape that serves your needs and looks good from installation to maturity. </p>
                 </div>
                 <div class="service-item">
