--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
         }
         
         .service-item {
-            text-align: center;
+            text-align: left;
             padding: 2rem;
         }
         
