--- a/index.html
+++ b/index.html
@@ -1128,24 +1128,24 @@
                     <p>We create professional custom landscape plans tailored to your property's unique character and your lifestyle needs. From plant selection and placement to hardscape integration, we design outdoor spaces that are both beautiful and functional. Our designs balance aesthetics with practical considerations like drainage, maintenance, and seasonal interest.  Our plans are produced with CAD and ready to be submitted for permitting or HOA approval.</p>
                 </div>
                 <div class="service-item">
-                    <h3>Retaining Walls & Boulder Placement</h3>
-                    <p>Our retaining walls are both structural and sculptural. Built for the terrain and style of the mountains and designed to transform slopes into striking landscape features. We solve grade challenges while creating outdoor spaces that elevate your property.</p>
-                </div>
-                <div class="service-item">
                     <h3>Grading</h3>
-                    <p>We sculpt terrain to direct water, create level spaces, and reveal your property's natural potential. Every slope, swale, and contour is intentionally engineered for function and formed for beauty.  It's the invisible artistry that makes water disappear, lawns thrive, and outdoor spaces feel perfectly proportioned.  The result is terrain that feels natural, functions flawlessly, and sets the stage for everything we build. </p>
-                </div>
-                <div class="service-item">
-                    <h3>Fire</h3>
-                    <p>Fire features define outdoor rooms. We craft custom fireplaces and fire pits that create natural gathering places.  Whether it's a towering stone chimney or an intimate circle nestled in a patio. Stone hearths, built-in seating, and thoughtful placement turn your space into a destination with purpose and atmosphere.  The result is an outdoor room with a view to the sky. A place where memories are forged.</p>
-                </div>
-                <div class="service-item">
-                    <h3>Plantings</h3>
-                    <p>From 4-inch pots to trees over 20 feet tall, we have the knowledge and equipment to put the right plant in the right place. We consider sun, soil, drainage and function for every planting.  Privacy buffers and foundation plantings are our specialty. With over 18 years of experience, we source quality plants at competitive rates and we install them right. The result is a landscape that serves your needs and looks good from installation to maturity. </p>
+                    <p>Grading is the foundation of everything that follows. We sculpt terrain to guide water naturally, create comfortable gathering areas, and reveal the best qualities of your property.  Every slope, swale, and contour is intentionally engineered for function and formed for beauty.  It's the invisible artistry that makes water disappear, lawns thrive, and outdoor spaces feel perfectly proportioned.  The result is terrain that feels natural, functions flawlessly, and sets the stage for everything we build. </p>
                 </div>
                 <div class="service-item">
                     <h3>Drainage</h3>
-                    <p>Water finds its way.  The mountains tell you where it wants to go…. We engineer drainage systems for steep terrain, variable soil, and heavy rainfall.  French drains, graded swales, and Drain Gardens designed to manage the entire watershed of your property.  Our experience in reading slope, calculating capacity, and building solutions protects structures and prevents erosion while turning drainage challenges into functional and attractive landscape features.</p>
+                    <p>In mountain terrain, water is powerful and persistent. We engineer drainage systems for steep terrain, variable soil, and heavy rainfall.  French drains, graded swales, and Drain Gardens designed to manage the entire watershed of your property.  Our experience in reading slope, calculating capacity, and building solutions protects structures and prevents erosion while turning drainage challenges into functional and attractive landscape features.</p>
+                </div>
+                <div class="service-item">
+                    <h3>Plantings</h3>
+                    <p>From 4-inch pots to trees over 20 feet tall, we have the knowledge and equipment to put the right plant in the right place. We consider sun, soil, drainage and function for every planting. Privacy screens, layered borders, and foundation plantings are composed with care and attention to detail. With over 18 years of experience, we source quality plants at competitive rates and we install them right. The result is a landscape that serves your needs and looks good from installation to maturity.</p>
+                </div>
+                <div class="service-item">
+                    <h3>Boulder Placement</h3>
+                    <p>In mountain landscapes, stone tells a story. It carries weight and history, becoming part of the architecture of the land itself. We use boulders to shape space, manage grade transitions, and define natural edges within the landscape.  Each boulder is carefully set for stability and proportion — partially embedded and oriented to feel settled over time. The goal is not decoration, but harmony: stone that enhances the natural beauty of the property while adding quiet strength, depth, and balance.</p>
+                </div>
+                <div class="service-item">
+                    <h3>Retaining Walls</h3>
+                    <p>Our retaining walls are both structural and sculptural. Built for the terrain and style of the mountains and designed to transform slopes into striking landscape features. We solve grade challenges while creating outdoor spaces that elevate your property.</p>
                 </div>
             </div>
         </div>
