--- a/index.html
+++ b/index.html
@@ -1150,14 +1150,14 @@
                 <div class="service-item">
                     <h3>Patios</h3>
                     <p>A patio should feel like a natural extension of your home. We design and build custom patios that create comfortable, grounded spaces for gathering, dining, and quiet evenings outdoors.  Using natural stone or concrete pavers, integrated seating walls, and thoughtfully placed boulders, each layout is shaped with attention to flow, proportion, and connection to the land. The result is an outdoor room that feels welcoming, balanced, and truly meant to be lived in.</p>
-            <div class="services-grid">
-                <div class="service-item">
-                    <h3>Landscape Design</h3>
-                    <p>We create professional custom landscape plans tailored to your property's unique character and your lifestyle needs. From plant selection and placement to hardscape integration, we design outdoor spaces that are both beautiful and functional. Our designs balance aesthetics with practical considerations like drainage, maintenance, and seasonal interest.  Our plans are produced with CAD and ready to be submitted for permitting or HOA approval.</p>
                 </div>
                 <div class="service-item">
-                    <h3>Grading</h3>
-                    <p>Grading is the foundation of everything that follows. We sculpt terrain to guide water naturally, create comfortable gathering areas, and reveal the best qualities of your property.  Every slope, swale, and contour is intentionally engineered for function and formed for beauty.  It's the invisible artistry that makes water disappear, lawns thrive, and outdoor spaces feel perfectly proportioned.  The result is terrain that feels natural, functions flawlessly, and sets the stage for everything we build. </p>
+                    <h3>Fire</h3>
+                    <p>Fire features define outdoor rooms. We craft custom fireplaces and fire pits that create natural gathering places.  Whether it's a towering stone chimney or an intimate circle nestled in a patio. Stone hearths, built-in seating, and thoughtful placement turn your space into a destination with purpose and atmosphere.  The result is an outdoor room with a view to the sky.  A place where memories are forged.</p>
+                </div>
+                <div class="service-item">
+                    <h3>Landscape Lighting</h3>
+                    <p>Landscape lighting adds a quiet layer of magic after sunset. We design and install low-voltage lighting systems that highlight architecture, illuminate pathways, and create depth in plantings. Strategic placement transforms how your property feels after dark—safe, usable, and layered with ambiance. </p>
                 </div>
                 <div class="service-item">
                     <h3>Drainage</h3>
