--- a/index.html
+++ b/index.html
@@ -283,10 +283,12 @@
         }
         
         .service-item h3 {
-            font-family: 'Crimson Pro', serif;
-            font-size: 1.5rem;
-            color: var(--stone);
-            margin-bottom: 0.5rem;
+    font-family: 'Crimson Pro', serif;
+    font-size: 1.5rem;
+    color: var(--stone);
+    margin-bottom: 0.5rem;
+    text-align: center;
+}
         }
         
         .service-item p {
