--- a/index.html
+++ b/index.html
@@ -1113,7 +1113,7 @@
                 </div>
             </div>
             
-
+            <p style="text-align: center; margin-top: 1rem; color: var(--earth); font-size: 0.95rem;">Pool deck transformation - Hendersonville, NC</p>
         </div>
     </section>
     
@@ -1159,6 +1159,10 @@
                 </div>
                 <div class="service-item">
                     <h3>Landscape Lighting</h3>
+                    <p>Landscape lighting adds a quiet layer of magic after sunset. We design and install low-voltage lighting systems that highlight architecture, illuminate pathways, and create depth in plantings. Strategic placement transforms how your property feels after dark—safe, usable, and layered with ambiance. </p>
+                </div>
+                <div class="service-item">
+                    <h3>Etc...</h3>
                     <p>Landscape lighting adds a quiet layer of magic after sunset. We design and install low-voltage lighting systems that highlight architecture, illuminate pathways, and create depth in plantings. Strategic placement transforms how your property feels after dark—safe, usable, and layered with ambiance. </p>
 
         </div>
