--- a/index.html
+++ b/index.html
@@ -1113,7 +1113,7 @@
                 </div>
             </div>
             
-            <p style="text-align: center; margin-top: 1rem; color: var(--earth); font-size: 0.95rem;">Pool deck transformation - Hendersonville, NC</p>
+            <p style="text-align: center; margin-top: 1rem; color: white; font-size: 0.95rem;">Pool deck transformation - Hendersonville, NC</p>
         </div>
     </section>
     
