--- a/index.html
+++ b/index.html
@@ -1163,7 +1163,17 @@
                 </div>
                 <div class="service-item">
                     <h3>Etc...</h3>
-                    <p>Landscape lighting adds a quiet layer of magic after sunset. We design and install low-voltage lighting systems that highlight architecture, illuminate pathways, and create depth in plantings. Strategic placement transforms how your property feels after dark—safe, usable, and layered with ambiance. </p>
+                    <ul>
+                        <li>Stepping Stones</li>
+                        <li>Artificial Turf</li>
+                        <li>Paver Driveways</li>
+                        <li>Tree & Brush Clearing</li>
+                        <li>Sod Installation</li>
+                        <li>Mulching</li>
+                        <li>Leaf Removal</li>
+                        <li>Land Restoration</li>                        
+                    </ul>
+                </div>
 
         </div>
     </section>
