--- a/index.html
+++ b/index.html
@@ -1162,6 +1162,10 @@
                     <p>   Landscape lighting adds a quiet layer of magic after sunset. We design and install low-voltage lighting systems that highlight architecture, illuminate pathways, and create depth in plantings. Strategic placement transforms how your property feels after dark—safe, usable, and layered with ambiance. </p>
                 </div>
                 <div class="service-item">
+                    <h3>Steps and Pathways</h3>
+                    <p>   Landscape lighting adds a quiet layer of magic after sunset. We design and install low-voltage lighting systems that highlight architecture, illuminate pathways, and create depth in plantings. Strategic placement transforms how your property feels after dark—safe, usable, and layered with ambiance. </p>
+                </div>
+                <div class="service-item">
                     <h3>Etc...</h3>
                     <ul>
                         <li>Stepping Stones</li>
