--- a/index.html
+++ b/index.html
@@ -1163,7 +1163,7 @@
                 </div>
                 <div class="service-item">
                     <h3>Steps and Pathways</h3>
-                    <p>   Landscape lighting adds a quiet layer of magic after sunset. We design and install low-voltage lighting systems that highlight architecture, illuminate pathways, and create depth in plantings. Strategic placement transforms how your property feels after dark—safe, usable, and layered with ambiance. </p>
+                    <p>      Elevation changes are part of mountain living.  We build steps and pathways that flow with the terrain, creating smooth transitions across slopes and between outdoor rooms.  Every line is shaped with care for movement, safety, and proportion.  The result is structure without rigidity and defined routes that feel natural, balanced, and fully integrated into the land. </p>
                 </div>
                 <div class="service-item">
                     <h3>Etc...</h3>
