--- a/index.html
+++ b/index.html
@@ -1232,7 +1232,8 @@
     <span class="slider-dot" onclick="goToSlider(1)"></span>
     <span class="slider-dot" onclick="goToSlider(2)"></span>
 </div>
-   
+        </div>
+    </section>  
     <!-- Services (moved after Gallery and Before/After) -->
     <section class="services section">
         <div class="section-inner">
