--- a/index.html
+++ b/index.html
@@ -1202,8 +1202,8 @@
     </div>
     
     <div class="comparison-slider" data-slider="2">
-        <img class="before-image" src="before-2.jpg" alt="Before">
-        <img class="after-image" src="after-2.jpg" alt="After">
+        <img class="before-image" src="before-after-holder.jpg" alt="Before">
+        <img class="after-image" src="before-after-holder.jpg" alt="After">
         <div class="slider-handle"></div>
         <div class="slider-labels">
             <span class="slider-label">BEFORE</span>
@@ -1212,8 +1212,8 @@
     </div>
     
     <div class="comparison-slider" data-slider="3">
-        <img class="before-image" src="before-3.jpg" alt="Before">
-        <img class="after-image" src="after-3.jpg" alt="After">
+        <img class="before-image" src="before-after-holder.jpg" alt="Before">
+        <img class="after-image" src="before-after-holder.jpg" alt="After">
         <div class="slider-handle"></div>
         <div class="slider-labels">
             <span class="slider-label">BEFORE</span>
@@ -1487,8 +1487,8 @@ const sliderCaption = document.getElementById('slider-caption');
 
 const captions = [
     "Pool deck transformation - Hendersonville, NC",
-    "Your second project caption here",
-    "Your third project caption here"
+    "Sometimes I forget to take the before.",
+    "Forgot again."
 ];
 
 function changeSlider(direction) {
