--- a/index.html
+++ b/index.html
@@ -1305,7 +1305,9 @@
             <div class="section-header">
                 <h2>About</h2>
             </div>
-            
+            <div style="max-width: 800px; margin: 0 auto 3rem auto;">
+                <img src="about-image.jpg" alt="Elemental Landscapes team" style="width: 100%; height: auto; aspect-ratio: 350/280; object-fit: cover; border-radius: 8px;">
+            </div>
             <div class="about-content">
                 <p>
                     Elemental Landscapes is a <strong>fully licensed and insured</strong> landscape contractor 
