--- a/index.html
+++ b/index.html
@@ -1306,7 +1306,7 @@
                 <h2>About</h2>
             </div>
             <div style="max-width: 800px; margin: 0 auto 3rem auto;">
-                <img src="elemental-gallery-4" alt="Elemental Landscapes team" style="width: 100%; height: auto; aspect-ratio: 350/280; object-fit: cover; border-radius: 8px;">
+                <img src="elemental-gallery-4.jpg" alt="Elemental Landscapes team" style="width: 100%; height: auto; aspect-ratio: 350/280; object-fit: cover; border-radius: 8px;">
             </div>
             <div class="about-content">
                 <p>
