--- a/index.html
+++ b/index.html
@@ -1305,8 +1305,7 @@
                 <h2>About</h2>
             </div>
             <div style="max-width: 800px; margin: 0 auto 3rem auto;">
-                <img src="elemental-gallery-4.jpg" alt="Elemental Landscapes team" style="width: 100%; height: auto; aspect-ratio: 350/280; object-fit: cover; border-radius: 12px;">
-            </div>
+                <img src="elemental-gallery-4.jpg" alt="Elemental Landscapes team" style="width: 100%; height: auto; aspect-ratio: 350/280; object-fit: cover; border-radius: 12px !important; display: block;">
             <div class="about-content">
                 <p>
                     Elemental Landscapes is a <strong>fully licensed and insured</strong> landscape contractor 
