--- a/index.html
+++ b/index.html
@@ -1304,9 +1304,10 @@
             <div class="section-header">
                 <h2>About</h2>
             </div>
-            <div style="max-width: 800px; margin: 0 auto 3rem auto;">
-                <img src="elemental-gallery-4.jpg" alt="Elemental Landscapes team" style="width: 100%; height: auto; aspect-ratio: 350/280; object-fit: cover; border-radius: 12px !important; display: block;">
-            <div class="about-content">
+<div style="max-width: 800px; margin: 0 auto 3rem auto; overflow: hidden; border-radius: 12px;">
+    <img src="elemental-gallery-4.jpg" alt="Elemental Landscapes team" style="width: 100%; height: auto; aspect-ratio: 350/280; object-fit: cover; display: block;">
+</div>
+<div class="about-content">
                 <p>
                     Elemental Landscapes is a <strong>fully licensed and insured</strong> landscape contractor 
                     serving Western North Carolina.
