--- a/index.html
+++ b/index.html
@@ -1304,7 +1304,7 @@
             <div class="section-header">
                 <h2>About</h2>
             </div>
-<div style="max-width: 800px; margin: 0 auto 3rem auto; overflow: hidden !important; border-radius: 12px !important; background: red;">
+<div style="max-width: 800px; margin: 0 auto 2rem auto; overflow: hidden; border-radius: 12px;">
     <img src="elemental-gallery-13.jpg" alt="Elemental Landscapes team" style="width: 100%; height: auto; aspect-ratio: 350/280; object-fit: cover; display: block; border-radius: 12px !important;">
 </div>
 <div class="about-content">
