--- a/index.html
+++ b/index.html
@@ -1282,7 +1282,7 @@
                     <p>      Elevation changes are part of mountain living.  We build steps and pathways that flow with the terrain, creating smooth transitions across slopes and between outdoor rooms.  Every line is shaped with care for movement, safety, and proportion.  The result is structure without rigidity and defined routes that feel natural, balanced, and fully integrated into the land. </p>
                 </div>
                 <div class="service-item">
-                    <h3>Etc...</h3>
+                    <h3>Other Services</h3>
                     <ul>
                         <li>Stepping Stones</li>
                         <li>Artificial Turf</li>
