--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             left: 0;
             right: 0;
             height: var(--header-height);
-            background: rgba(255, 255, 255, 0.98);
+            background: #ffffff;
             backdrop-filter: blur(10px);
             border-bottom: 1px solid rgba(58, 54, 50, 0.1);
             z-index: 1000;
