--- a/index.html
+++ b/index.html
@@ -1395,7 +1395,7 @@
 <!-- Footer -->
 <footer>
     <p>&copy; <span id="year"></span> Elemental Landscapes · Western North Carolina</p>
-    <p style="margin-top: 0.5rem;">Licensed & Insured · Veteran Owned</p>
+    <p style="margin-top: 0.5rem;">NCLC License #3603 & #CL1736 · Fully Insured · Veteran Owned</p>
 </footer>
 
 <script>
