--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             --moss: #6b7d5c;
             --sage: #8b9d83;
             --sand: #d4c5a9;
-            --cream: #f5f1e8;
+            --cream: #ffffff;
             --white: #ffffff;
             
             --max: 1400px;
