--- a/index.html
+++ b/index.html
@@ -1009,8 +1009,10 @@
 <!-- Header with 2 Images -->
 <header id="header">
     <div class="header-inner">
-        <div class="logo">
-    <img src="headlogo.jpg" alt="Elemental Landscapes">
+<div class="logo">
+    <a href="#" style="display: flex; align-items: center; height: 100%; text-decoration: none;">
+        <img src="headlogo.jpg" alt="Elemental Landscapes">
+    </a>
 </div>
         
         <a href="#contact" class="header-phone">
