--- a/index.html
+++ b/index.html
@@ -1010,7 +1010,7 @@
 <header id="header">
     <div class="header-inner">
 <div class="logo">
-    <a href="#" style="display: flex; align-items: center; height: 100%; text-decoration: none;">
+    <a href="#top" onclick="window.scrollTo({top: 0, behavior: 'smooth'}); return false;" style="display: flex; align-items: center; height: 100%; text-decoration: none;">
         <img src="headlogo.jpg" alt="Elemental Landscapes">
     </a>
 </div>
