--- a/index.html
+++ b/index.html
@@ -1269,11 +1269,11 @@
                 </div>
                 <div class="service-item">
                     <h3>Patios</h3>
-                    <p>   A patio should feel like a natural extension of your home. We design and build custom patios that create comfortable, grounded spaces for gathering, dining, and quiet evenings outdoors.  Using natural stone or concrete pavers, integrated seating walls, and thoughtfully placed boulders, each layout is shaped with attention to flow, proportion, and connection to the land. The result is an outdoor room that feels welcoming, balanced, and truly meant to be lived in.</p>
+                    <p>   A patio should feel like a natural extension of your home. We design and build custom patios that create comfortable, grounded spaces for gathering, dining, and quiet evenings outdoors. Using natural stone or concrete pavers, integrated seating walls, and thoughtfully placed boulders, each layout is shaped with attention to flow, proportion, and connection to the land. This creates an outdoor room that feels welcoming, balanced, and truly meant to be lived in. </p>
                 </div>
                 <div class="service-item">
                     <h3>Fire</h3>
-                    <p>   Fire features define outdoor rooms. We craft custom fireplaces and fire pits that create natural gathering places.  Whether it's a towering stone chimney or an intimate circle nestled in a patio. Stone hearths, built-in seating, and thoughtful placement turn your space into a destination with purpose and atmosphere.  The result is an outdoor room with a view to the sky.  A place where memories are forged.</p>
+                    <p>   Fire features define outdoor rooms. We craft custom fireplaces and fire pits that create natural gathering places. Whether it's a towering stone chimney or an intimate circle nestled in a patio. Stone hearths, built-in seating, and thoughtful placement turn your space into a destination with purpose and atmosphere. You get an outdoor room with a view to the sky. A place where memories are forged.</p>
                 </div>
                 <div class="service-item">
                     <h3>Landscape Lighting</h3>
@@ -1281,7 +1281,7 @@
                 </div>
                 <div class="service-item">
                     <h3>Steps and Pathways</h3>
-                    <p>      Elevation changes are part of mountain living.  We build steps and pathways that flow with the terrain, creating smooth transitions across slopes and between outdoor rooms.  Every line is shaped with care for movement, safety, and proportion.  The result is structure without rigidity and defined routes that feel natural, balanced, and fully integrated into the land. </p>
+                    <p>      Elevation changes are part of mountain living. We build steps and pathways that flow with the terrain, creating smooth transitions across slopes and between outdoor rooms. Every line is shaped with care for movement, safety, and proportion. What emerges is structure without rigidity and defined routes that feel natural, balanced, and fully integrated into the land.</p>
                 </div>
                 <div class="service-item">
                     <h3>Other Services</h3>
