--- a/index.html
+++ b/index.html
@@ -1316,12 +1316,12 @@
                 </p>
                 <p>
                     We specialize in landscape design and construction, offering services such as retaining walls, 
-                    grading, mulching, landscape lighting, paving, water features, planting, sod installation, 
-                    outdoor kitchens, artificial turf, and patios.
+                    grading, mulching, landscape lighting, paver and flagstone installation, water features, planting, sod installation, 
+                    outdoor kitchen construstion, artificial turf, and patios.
                 </p>
                 <p>
-                    We are a <strong>Veteran-owned business</strong> with over <strong>12 years of experience</strong> 
-                    in landscape construction and design.
+                    We are a <strong>Veteran-owned business</strong> with over <strong>20 years of experience</strong> 
+                    in landscape design and construction.
                 </p>
             </div>
         </div>
