--- a/index.html
+++ b/index.html
@@ -1165,7 +1165,13 @@
                         </div>
                     </div>
                     
-                    <!-- TO ADD MORE: Copy a gallery-item block, paste here, update onclick="openLightbox(X)" number -->
+                    <!-- Gallery Item 13 -->
+                    <div class="gallery-item" onclick="openLightbox(11)">
+                        <img src="elemental-gallery-29.jpg" alt="Pool area landscaping">
+                        <div class="gallery-caption">
+                            <h4>Stonework Detail</h4>
+                            <p>Asheville, NC</p>
+                        <!-- TO ADD MORE: Copy a gallery-item block, paste here, update onclick="openLightbox(X)" number -->
                 </div>
             </div>
             <button class="gallery-scroll-arrow gallery-scroll-right" onclick="scrollGallery('right')" aria-label="Scroll right">
@@ -1213,8 +1219,8 @@
     </div>
     
     <div class="comparison-slider" data-slider="3">
-        <img class="before-image" src="before-after-holder.jpg" alt="Before">
-        <img class="after-image" src="before-after-holder.jpg" alt="After">
+        <img class="before-image" src="elemental-galler-48.jpg" alt="Before">
+        <img class="after-image" src="elemental-galler-48.jpg" alt="After">
         <div class="slider-handle"></div>
         <div class="slider-labels">
             <span class="slider-label">BEFORE</span>
