--- a/index.html
+++ b/index.html
@@ -1283,8 +1283,8 @@
     </div>
     
     <div class="comparison-slider" data-slider="3">
-        <img class="before-image" src="elemental-galler-48.jpg" alt="Before">
-        <img class="after-image" src="elemental-galler-48.jpg" alt="After">
+        <img class="before-image" src="elemental-gallery-48.jpg" alt="Before">
+        <img class="after-image" src="elemental-gallery-48.jpg" alt="After">
         <div class="slider-handle"></div>
         <div class="slider-labels">
             <span class="slider-label">BEFORE</span>
