--- a/index.html
+++ b/index.html
@@ -1294,10 +1294,10 @@
                               
                     <!-- Gallery Item 27 -->
                     <div class="gallery-item" onclick="openLightbox(11)">
-                        <img src="elemental-gallery-14.jpg" alt="Pool area landscaping">
+                        <img src="elemental-gallery-60.jpg" alt="Pool area landscaping">
                         <div class="gallery-caption">
-                            <h4>Natural Steps</h4>
-                            <p>Brevard, NC</p>
+                            <h4>Water Feature</h4>
+                            <p>Flat Rock, NC</p>
                        </div>
                     </div>
                         
