--- a/index.html
+++ b/index.html
@@ -1278,7 +1278,7 @@
                     <div class="gallery-item" onclick="openLightbox(11)">
                         <img src="elemental-gallery-18.jpg" alt="Pool area landscaping">
                         <div class="gallery-caption">
-                            <h4>Natural Steps</h4>
+                            <h4>Stone Steps</h4>
                             <p>Flat Rock, NC</p>
                        </div>
                     </div>
